# rs-web-dev

./: Cargo.toml  README.md
db/: .env  Cargo.toml  db.sql
db/src/: main.rs
http/src/: httprequest.rs  httpresponse.rs
httpserver/: Cargo.toml
httpserver/src/: handler.rs  router.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
webservice/: Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  models.rs  routers.rs  state.rs
